# multiagent-loop

./: .gitignore  CLAUDE.md  EFFORT_LEVELS_IMPLEMENTED.md  EFFORT_LEVELS_PROPOSAL.md  LEETCODE_COMPARISON.md  README.md  agent.py  check_batch_progress.sh  process_leetcode_batch.sh  pyproject.toml  supervisor.py  understand.py
docs/: ai-first-design.md  claude-as-user.md  overview.md  pid-files.md  shared-understanding.md  test-run-results.md  workspace-architecture.md
entries/2026/02/23/: python-package-restructuring-complete.md
entries/2026/02/27/: batch-7-fifty-more-problems-zero-failures.md
entries/2026/02/28/: complete-leetcode-dataset-five-hundred-thirty-problems-zero-failures.md
entries/2026/03/01/: multi-model-code-review-of-530-leetcode-solutions.md
src/multiagent_loop/: supervisor.py
